fixed header element visibility issue on page load.

--- a/app/assets/styles/components/_line-animation.css
+++ b/app/assets/styles/components/_line-animation.css
@@ -4,6 +4,8 @@
   }
 
   &--animated {
+    opacity: 1 !important;
+
     .inner-span {
       transform: translateY(0);
     }
